update dependencies versions