@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
+		<version>3.2.0</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.aerospike.demo</groupId>
@@ -16,8 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<lombok>1.18.28</lombok>
-		<spring-data-aerospike>4.5.0</spring-data-aerospike>
-		<spring-boot-starter-test>3.1.2</spring-boot-starter-test>
+		<spring-data-aerospike>4.6.0</spring-data-aerospike>
+		<spring-boot-starter-test>3.2.0</spring-boot-starter-test>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,6 +55,13 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.math=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
